small changes for Fedora 32 setup

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,7 +42,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -i -se c' # vim 
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -i -se c' # mouse Selection
 
 # Kill current session
-bind-key \ confirm-before -p 'kill-session #S? (y/n)' kill-session
+bind-key '\' confirm-before -p 'kill-session #S? (y/n)' kill-session
 
 # Create a new session
 bind-key N new-session
